adição de contatos, criação do style.css, alteração de cor de fonte e estilo

--- a/HTML-CSS/index.html
+++ b/HTML-CSS/index.html
@@ -4,26 +4,40 @@
     <head>
         <meta charset="utf-8">
         <title>Éder Vinícius</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <header>
-            <h1>Éder Vinícius</h1>
+            <h1 id="title">Éder Vinícius</h1>
         </header>
         <section>
             <header>
-                <h2>Posts</h2>
+                <h2 class="subtitle">Posts</h2>
             </header>
             <article>
                 <header>
-                    <h3>Post #1</h3>
+                    <h3 class="posttitle">Post #1</h3>
+                    <img src="florian-olivo-4hbJ-eymZ1o-unsplash.jpg" alt="Editor de texto contendo código html">
                 </header>
                 <p>
                     Cras orci tortor, <a href="https://www.google.com" target="_blank">varius vitae finibus quis</a>, tristique non arcu. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse id tempor tellus. Etiam id tempor arcu. Phasellus gravida enim quis magna feugiat maximus. Vestibulum maximus neque eget semper congue. Nam ultricies aliquam consectetur. Proin ac cursus quam. Sed viverra dolor nunc, a rutrum neque suscipit iaculis. Nam sodales commodo nulla, maximus elementum mi. Integer consectetur eros lacus, lacinia convallis tortor venenatis ut. Vestibulum eget rhoncus elit. Mauris sagittis pellentesque orci non feugiat. Suspendisse eget pulvinar augue, tempor malesuada diam.
                 </p>
             </article>
         </section>
-        <footer></footer>
+        <footer>
+            <ul>
+                <li>
+                    <a href="mailto:eder.devp@gmail.com">eder.devp@gmail.com</a>
+                </li>
+                <li>
+                    <a href="#" target="_blank">Linkedin</a>
+                </li>
+                <li>
+                    <a href="#" target="_blank">Github</a>
+                </li>
+            </ul>
+        </footer>
     </body>
 
 </html>
